correct spacing betweens els

--- a/src/css/blocks/about.css
+++ b/src/css/blocks/about.css
@@ -33,7 +33,7 @@
   }
   
   html body .about__right {
-    margin-top: 40px;  
+    margin-top: 60px;  
   }
   
   
